--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,16 @@ dist.dir=dist
 dist.jar=${dist.dir}/MotelAdmin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.DateChooser.jar=C:\\Program Files\\Java\\jdk1.8.0_25\\jre\\lib\\ext\\DateChooser.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Program Files\\Java\\jdk1.8.0_25\\jre\\lib\\ext\\jcalendar-1.3.3.jar
+file.reference.mysql-connector-java-commercial-5.1.7-bin.jar=G:\\librerias\\mysql-connector-java-commercial-5.1.7-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-commercial-5.1.7-bin.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
