--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,15 @@ dist.jar=${dist.dir}/MotelAdmin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.DateChooser.jar=C:\\Program Files\\Java\\jdk1.8.0_25\\jre\\lib\\ext\\DateChooser.jar
+file.reference.itext-pdfa-5.5.3-javadoc.jar=G:\\librerias\\itext-5.5.3\\itext-pdfa-5.5.3-javadoc.jar
+file.reference.itext-pdfa-5.5.3-sources.jar=G:\\librerias\\itext-5.5.3\\itext-pdfa-5.5.3-sources.jar
+file.reference.itext-pdfa-5.5.3.jar=G:\\librerias\\itext-5.5.3\\itext-pdfa-5.5.3.jar
+file.reference.itext-xtra-5.5.3-javadoc.jar=G:\\librerias\\itext-5.5.3\\itext-xtra-5.5.3-javadoc.jar
+file.reference.itext-xtra-5.5.3-sources.jar=G:\\librerias\\itext-5.5.3\\itext-xtra-5.5.3-sources.jar
+file.reference.itext-xtra-5.5.3.jar=G:\\librerias\\itext-5.5.3\\itext-xtra-5.5.3.jar
+file.reference.itextpdf-5.5.3-javadoc.jar=G:\\librerias\\itext-5.5.3\\itextpdf-5.5.3-javadoc.jar
+file.reference.itextpdf-5.5.3-sources.jar=G:\\librerias\\itext-5.5.3\\itextpdf-5.5.3-sources.jar
+file.reference.itextpdf-5.5.3.jar=G:\\librerias\\itext-5.5.3\\itextpdf-5.5.3.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Program Files\\Java\\jdk1.8.0_25\\jre\\lib\\ext\\jcalendar-1.3.3.jar
 file.reference.mysql-connector-java-commercial-5.1.7-bin.jar=G:\\librerias\\mysql-connector-java-commercial-5.1.7-bin.jar
 includes=**
@@ -36,7 +45,16 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-commercial-5.1.7-bin.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.itext-pdfa-5.5.3-javadoc.jar}:\
+    ${file.reference.itext-pdfa-5.5.3-sources.jar}:\
+    ${file.reference.itext-pdfa-5.5.3.jar}:\
+    ${file.reference.itext-xtra-5.5.3-javadoc.jar}:\
+    ${file.reference.itext-xtra-5.5.3-sources.jar}:\
+    ${file.reference.itext-xtra-5.5.3.jar}:\
+    ${file.reference.itextpdf-5.5.3-javadoc.jar}:\
+    ${file.reference.itextpdf-5.5.3-sources.jar}:\
+    ${file.reference.itextpdf-5.5.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
